some more migrations

--- a/etc/plone-projects.cfg
+++ b/etc/plone-projects.cfg
@@ -2,7 +2,7 @@
 authors-file = authors.cfg
 svn-repos =
 #    archetypes http://svn.plone.org/svn/archetypes
-#    collective http://svn.plone.org/svn/collective
+    collective http://svn.plone.org/svn/collective
     plone http://svn.plone.org/svn/plone
 
 svn-all-fast-export-tool = %(here)s/../src/svn2git/svn-all-fast-export
@@ -13,29 +13,125 @@ analyze-location = %(here)s/../var/repos/analyze
 version_regex = ^(plone|v)?[\d._-]+(alpha|beta|branch|rc|RC|final|a|b|c|x)?(\d)*$
 
 
-collective/wicked
-collective/txtfilter
-Products.CMFDynamicViewFTI          = svn ${remotes:svn_collective}/CMFDynamicViewFTI/trunk
-Products.CMFFormController          = svn ${remotes:svn_collective}/CMFFormController/trunk
-Products.CMFPlacefulWorkflow        = svn ${remotes:svn_collective}/Products.CMFPlacefulWorkflow/trunk
-Products.CMFQuickInstallerTool      = svn ${remotes:svn_collective}/CMFQuickInstallerTool/trunk
-Products.CMFTestCase                = svn ${remotes:svn_collective}/Products.CMFTestCase/trunk
-Products.contentmigration           = svn ${remotes:svn_collective}/Products.contentmigration/trunk
-Products.GroupUserFolder            = svn ${remotes:svn_collective}/Products.GroupUserFolder/trunk
-Products.i18ntestcase               = svn ${remotes:svn_collective}/Products.i18ntestcase/trunk
-Products.PlacelessTranslationService= svn ${remotes:svn_collective}/PlacelessTranslationService/trunk
-Products.PloneLanguageTool          = svn ${remotes:svn_collective}/PloneLanguageTool/trunk
-Products.PloneTestCase              = svn ${remotes:svn_collective}/Products.PloneTestCase/trunk
-Products.SecureMailHost             = svn ${remotes:svn_collective}/SecureMailHost/branches/1.1
-Products.statusmessages             = svn ${remotes:svn_collective}/statusmessages/trunk
-drafts.cfg:plone.app.z3cformdrafts = svn https://svn.plone.org/svn/plone/plone.app.z3cformdrafts/trunk
-drafts.cfg:plone.z3cformbuttonoverrides = svn https://svn.plone.org/svn/plone/plone.z3cformbuttonoverrides/trunk
-drafts.cfg:dexterity.draftspreviewbehavior = svn https://svn.plone.org/svn/collective/dexterity.draftspreviewbehavior/trunk
+#[repo:Products.SecureMailHost]
+#rules = %(here)s/plone-rules/Products.SecureMailHost.cfg
+#svn-repo = collective
+#svn-path = /SecureMailHost
+#git-org = plone
+#status = ROK
+#
+#[repo:Products.GroupUserFolder]
+#rules = %(here)s/plone-rules/Products.GroupUserFolder.cfg
+#svn-repo = collective
+#svn-path = /Products.GroupUserFolder
+#git-org = plone
+#status = ROK
 
 
+[repo:wicked]
+rules = %(here)s/plone-rules/wicked.cfg
+svn-repo = collective
+svn-path = /wicked
+git-org = plone
+status = OK
 
+[repo:txtfilter]
+rules = %(here)s/plone-rules/txtfilter.cfg
+svn-repo = collective
+svn-path = /txtfilter
+git-org = plone
+status = OK
 
+[repo:Products.CMFDynamicViewFTI]
+rules = %(here)s/plone-rules/Products.CMFDynamicViewFTI.cfg
+svn-repo = collective
+svn-path = /CMFDynamicViewFTI
+git-org = plone
+status = OK
 
+[repo:Products.CMFFormController]
+rules = %(here)s/plone-rules/Products.CMFFormController.cfg
+svn-repo = collective
+svn-path = /CMFFormController
+git-org = plone
+status = OK
+
+[repo:Products.CMFQuickInstallerTool]
+rules = %(here)s/plone-rules/Products.CMFQuickInstallerTool.cfg
+svn-repo = collective
+svn-path = /CMFQuickInstallerTool
+git-org = plone
+status = OK
+
+[repo:Products.CMFTestCase]
+rules = %(here)s/plone-rules/Products.CMFTestCase.cfg
+svn-repo = collective
+svn-path = /Products.CMFTestCase
+git-org = plone
+status = OK
+
+[repo:Products.contentmigration]
+rules = %(here)s/plone-rules/Products.contentmigration.cfg
+svn-repo = collective
+svn-path = /Products.contentmigration
+git-org = plone
+status = OK
+
+[repo:Products.i18ntestcase]
+rules = %(here)s/plone-rules/Products.i18ntestcase.cfg
+svn-repo = collective
+svn-path = /Products.i18ntestcase
+git-org = plone
+status = OK
+
+[repo:Products.PlacelessTranslationService]
+rules = %(here)s/plone-rules/Products.PlacelessTranslationService.cfg
+svn-repo = collective
+svn-path = /PlacelessTranslationService
+git-org = plone
+status = OK
+
+[repo:Products.PloneLanguageTool]
+rules = %(here)s/plone-rules/Products.PloneLanguageTool.cfg
+svn-repo = collective
+svn-path = /PloneLanguageTool
+git-org = plone
+status = OK
+
+[repo:Products.PloneTestCase]
+rules = %(here)s/plone-rules/Products.PloneTestCase.cfg
+svn-repo = collective
+svn-path = /Products.PloneTestCase
+git-org = plone
+status = OK
+
+[repo:Products.statusmessages]
+rules = %(here)s/plone-rules/Products.statusmessages.cfg
+svn-repo = collective
+svn-path = /statusmessages
+git-org = plone
+status = OK
+
+[repo:dexterity.draftspreviewbehavior]
+rules = %(here)s/plone-rules/dexterity.draftspreviewbehavior.cfg
+svn-repo = collective
+svn-path = /dexterity.draftspreviewbehavior
+git-org = collective
+status = OK
+
+[repo:plone.z3cformbuttonoverrides]
+rules = %(here)s/plone-rules/plone.z3cformbuttonoverrides.cfg
+svn-repo = plone
+svn-path = /plone.z3cformbuttonoverrides
+git-org = plone
+status = OK
+
+[repo:plone.app.z3cformdrafts]
+rules = %(here)s/plone-rules/plone.app.z3cformdrafts.cfg
+svn-repo = plone
+svn-path = /plone.app.z3cformdrafts
+git-org = plone
+status = OK
 
 
 
@@ -295,66 +391,10 @@ drafts.cfg:dexterity.draftspreviewbehavior = svn https://svn.plone.org/svn/colle
 #git-org = plone
 #status = REVIEW-NEEDED
 #
-#[repo:Products.CMFDynamicViewFTI]
-#rules = %(here)s/plone-rules/Products.CMFDynamicViewFTI.cfg
-#svn-repo = collective
-#svn-path = /CMFDynamicViewFTI
-#git-org = plone
-#status = REVIEW-NEEDED
-#
 #[repo:Products.CMFEditions]
 #rules = %(here)s/plone-rules/Products.CMFEditions.cfg
 #svn-repo = collective
 #svn-path = /Products.CMFEditions
-#git-org = plone
-#status = REVIEW-NEEDED
-#
-#[repo:Products.CMFFormController]
-#rules = %(here)s/plone-rules/Products.CMFFormController.cfg
-#svn-repo = collective
-#svn-path = /CMFFormController
-#git-org = plone
-#status = REVIEW-NEEDED
-#
-#[repo:Products.CMFPlacefulWorkflow]
-#rules = %(here)s/plone-rules/Products.CMFPlacefulWorkflow.cfg
-#svn-repo = collective
-#svn-path = /Products.CMFPlacefulWorkflow
-#git-org = plone
-#status = REVIEW-NEEDED
-#
-#[repo:Products.CMFQuickInstallerTool]
-#rules = %(here)s/plone-rules/Products.CMFQuickInstallerTool.cfg
-#svn-repo = collective
-#svn-path = /CMFQuickInstallerTool
-#git-org = plone
-#status = REVIEW-NEEDED
-#
-#[repo:Products.CMFTestCase]
-#rules = %(here)s/plone-rules/Products.CMFTestCase.cfg
-#svn-repo = collective
-#svn-path = /Products.CMFTestCase
-#git-org = plone
-#status = REVIEW-NEEDED
-#
-#[repo:Products.contentmigration]
-#rules = %(here)s/plone-rules/Products.contentmigration.cfg
-#svn-repo = collective
-#svn-path = /Products.contentmigration
-#git-org = plone
-#status = REVIEW-NEEDED
-#
-#[repo:Products.GroupUserFolder]
-#rules = %(here)s/plone-rules/Products.GroupUserFolder.cfg
-#svn-repo = collective
-#svn-path = /Products.GroupUserFolder
-#git-org = plone
-#status = REVIEW-NEEDED
-#
-#[repo:Products.i18ntestcase]
-#rules = %(here)s/plone-rules/Products.i18ntestcase.cfg
-#svn-repo = collective
-#svn-path = /Products.i18ntestcase
 #git-org = plone
 #status = REVIEW-NEEDED
 #
@@ -365,47 +405,12 @@ drafts.cfg:dexterity.draftspreviewbehavior = svn https://svn.plone.org/svn/colle
 ##git-org = plone
 ##status = OK
 #
-#[repo:Products.PlacelessTranslationService]
-#rules = %(here)s/plone-rules/Products.PlacelessTranslationService.cfg
-#svn-repo = collective
-#svn-path = /PlacelessTranslationService
-#git-org = plone
-#status = REVIEW-NEEDED
-#
-#[repo:Products.PloneLanguageTool]
-#rules = %(here)s/plone-rules/Products.PloneLanguageTool.cfg
-#svn-repo = collective
-#svn-path = /PloneLanguageTool
-#git-org = plone
-#status = REVIEW-NEEDED
-#
 ##[repo:Products.PlonePAS]
 ##rules = %(here)s/plone-rules/Products.PlonePAS.cfg
 ##svn-repo = collective
 ##svn-path = /Products.PlonePAS
 ##git-org = plone
 ##status = OK
-#
-#[repo:Products.PloneTestCase]
-#rules = %(here)s/plone-rules/Products.PloneTestCase.cfg
-#svn-repo = collective
-#svn-path = /Products.PloneTestCase
-#git-org = plone
-#status = REVIEW-NEEDED
-#
-#[repo:Products.SecureMailHost]
-#rules = %(here)s/plone-rules/Products.SecureMailHost.cfg
-#svn-repo = collective
-#svn-path = /SecureMailHost
-#git-org = plone
-#status = REVIEW-NEEDED
-#
-#a[repo:Products.statusmessages]
-#rules = %(here)s/plone-rules/Products.statusmessages.cfg
-#svn-repo = collective
-#svn-path = /statusmessages
-#git-org = plone
-#status = REVIEW-NEEDED
 #
 #[repo:Products.TinyMCE]
 #rules = %(here)s/plone-rules/Products.TinyMCE.cfg
@@ -428,19 +433,6 @@ drafts.cfg:dexterity.draftspreviewbehavior = svn https://svn.plone.org/svn/colle
 #git-org = plone
 #status = REVIEW-NEEDED
 #
-#[repo:txtfilter]
-#rules = %(here)s/plone-rules/txtfilter.cfg
-#svn-repo = collective
-#svn-path = /txtfilter
-#git-org = plone
-#status = REVIEW-NEEDED
-#
-#[repo:wicked]
-#rules = %(here)s/plone-rules/wicked.cfg
-#svn-repo = collective
-#svn-path = /wicked
-#git-org = plone
-#status = REVIEW-NEEDED
 
 #
 #
