2 repos left to do

--- a/etc/plone-projects.cfg
+++ b/etc/plone-projects.cfg
@@ -13,126 +13,126 @@ analyze-location = %(here)s/../var/repos/analyze
 version_regex = ^(plone|v)?[\d._-]+(alpha|beta|branch|rc|RC|final|a|b|c|x)?(\d)*$
 
 
-#[repo:Products.SecureMailHost]
-#rules = %(here)s/plone-rules/Products.SecureMailHost.cfg
+[repo:Products.SecureMailHost]
+rules = %(here)s/plone-rules/Products.SecureMailHost.cfg
+svn-repo = collective
+svn-path = /SecureMailHost
+git-org = plone
+status = ROK
+
+[repo:Products.GroupUserFolder]
+rules = %(here)s/plone-rules/Products.GroupUserFolder.cfg
+svn-repo = collective
+svn-path = /Products.GroupUserFolder
+git-org = plone
+status = ROK
+
+
+#[repo:wicked]
+#rules = %(here)s/plone-rules/wicked.cfg
 #svn-repo = collective
-#svn-path = /SecureMailHost
+#svn-path = /wicked
 #git-org = plone
-#status = ROK
+#status = OK
 #
-#[repo:Products.GroupUserFolder]
-#rules = %(here)s/plone-rules/Products.GroupUserFolder.cfg
+#[repo:txtfilter]
+#rules = %(here)s/plone-rules/txtfilter.cfg
 #svn-repo = collective
-#svn-path = /Products.GroupUserFolder
+#svn-path = /txtfilter
 #git-org = plone
-#status = ROK
-
-
-[repo:wicked]
-rules = %(here)s/plone-rules/wicked.cfg
-svn-repo = collective
-svn-path = /wicked
-git-org = plone
-status = OK
-
-[repo:txtfilter]
-rules = %(here)s/plone-rules/txtfilter.cfg
-svn-repo = collective
-svn-path = /txtfilter
-git-org = plone
-status = OK
-
-[repo:Products.CMFDynamicViewFTI]
-rules = %(here)s/plone-rules/Products.CMFDynamicViewFTI.cfg
-svn-repo = collective
-svn-path = /CMFDynamicViewFTI
-git-org = plone
-status = OK
-
-[repo:Products.CMFFormController]
-rules = %(here)s/plone-rules/Products.CMFFormController.cfg
-svn-repo = collective
-svn-path = /CMFFormController
-git-org = plone
-status = OK
-
-[repo:Products.CMFQuickInstallerTool]
-rules = %(here)s/plone-rules/Products.CMFQuickInstallerTool.cfg
-svn-repo = collective
-svn-path = /CMFQuickInstallerTool
-git-org = plone
-status = OK
-
-[repo:Products.CMFTestCase]
-rules = %(here)s/plone-rules/Products.CMFTestCase.cfg
-svn-repo = collective
-svn-path = /Products.CMFTestCase
-git-org = plone
-status = OK
-
-[repo:Products.contentmigration]
-rules = %(here)s/plone-rules/Products.contentmigration.cfg
-svn-repo = collective
-svn-path = /Products.contentmigration
-git-org = plone
-status = OK
-
-[repo:Products.i18ntestcase]
-rules = %(here)s/plone-rules/Products.i18ntestcase.cfg
-svn-repo = collective
-svn-path = /Products.i18ntestcase
-git-org = plone
-status = OK
-
-[repo:Products.PlacelessTranslationService]
-rules = %(here)s/plone-rules/Products.PlacelessTranslationService.cfg
-svn-repo = collective
-svn-path = /PlacelessTranslationService
-git-org = plone
-status = OK
-
-[repo:Products.PloneLanguageTool]
-rules = %(here)s/plone-rules/Products.PloneLanguageTool.cfg
-svn-repo = collective
-svn-path = /PloneLanguageTool
-git-org = plone
-status = OK
-
-[repo:Products.PloneTestCase]
-rules = %(here)s/plone-rules/Products.PloneTestCase.cfg
-svn-repo = collective
-svn-path = /Products.PloneTestCase
-git-org = plone
-status = OK
-
-[repo:Products.statusmessages]
-rules = %(here)s/plone-rules/Products.statusmessages.cfg
-svn-repo = collective
-svn-path = /statusmessages
-git-org = plone
-status = OK
-
-[repo:dexterity.draftspreviewbehavior]
-rules = %(here)s/plone-rules/dexterity.draftspreviewbehavior.cfg
-svn-repo = collective
-svn-path = /dexterity.draftspreviewbehavior
-git-org = collective
-status = OK
-
-[repo:plone.z3cformbuttonoverrides]
-rules = %(here)s/plone-rules/plone.z3cformbuttonoverrides.cfg
-svn-repo = plone
-svn-path = /plone.z3cformbuttonoverrides
-git-org = plone
-status = OK
-
-[repo:plone.app.z3cformdrafts]
-rules = %(here)s/plone-rules/plone.app.z3cformdrafts.cfg
-svn-repo = plone
-svn-path = /plone.app.z3cformdrafts
-git-org = plone
-status = OK
-
+#status = OK
+#
+#[repo:Products.CMFDynamicViewFTI]
+#rules = %(here)s/plone-rules/Products.CMFDynamicViewFTI.cfg
+#svn-repo = collective
+#svn-path = /CMFDynamicViewFTI
+#git-org = plone
+#status = OK
+#
+#[repo:Products.CMFFormController]
+#rules = %(here)s/plone-rules/Products.CMFFormController.cfg
+#svn-repo = collective
+#svn-path = /CMFFormController
+#git-org = plone
+#status = OK
+#
+#[repo:Products.CMFQuickInstallerTool]
+#rules = %(here)s/plone-rules/Products.CMFQuickInstallerTool.cfg
+#svn-repo = collective
+#svn-path = /CMFQuickInstallerTool
+#git-org = plone
+#status = OK
+#
+#[repo:Products.CMFTestCase]
+#rules = %(here)s/plone-rules/Products.CMFTestCase.cfg
+#svn-repo = collective
+#svn-path = /Products.CMFTestCase
+#git-org = plone
+#status = OK
+#
+#[repo:Products.contentmigration]
+#rules = %(here)s/plone-rules/Products.contentmigration.cfg
+#svn-repo = collective
+#svn-path = /Products.contentmigration
+#git-org = plone
+#status = OK
+#
+#[repo:Products.i18ntestcase]
+#rules = %(here)s/plone-rules/Products.i18ntestcase.cfg
+#svn-repo = collective
+#svn-path = /Products.i18ntestcase
+#git-org = plone
+#status = OK
+#
+#[repo:Products.PlacelessTranslationService]
+#rules = %(here)s/plone-rules/Products.PlacelessTranslationService.cfg
+#svn-repo = collective
+#svn-path = /PlacelessTranslationService
+#git-org = plone
+#status = OK
+#
+#[repo:Products.PloneLanguageTool]
+#rules = %(here)s/plone-rules/Products.PloneLanguageTool.cfg
+#svn-repo = collective
+#svn-path = /PloneLanguageTool
+#git-org = plone
+#status = OK
+#
+#[repo:Products.PloneTestCase]
+#rules = %(here)s/plone-rules/Products.PloneTestCase.cfg
+#svn-repo = collective
+#svn-path = /Products.PloneTestCase
+#git-org = plone
+#status = OK
+#
+#[repo:Products.statusmessages]
+#rules = %(here)s/plone-rules/Products.statusmessages.cfg
+#svn-repo = collective
+#svn-path = /statusmessages
+#git-org = plone
+#status = OK
+#
+#[repo:dexterity.draftspreviewbehavior]
+#rules = %(here)s/plone-rules/dexterity.draftspreviewbehavior.cfg
+#svn-repo = collective
+#svn-path = /dexterity.draftspreviewbehavior
+#git-org = collective
+#status = OK
+#
+#[repo:plone.z3cformbuttonoverrides]
+#rules = %(here)s/plone-rules/plone.z3cformbuttonoverrides.cfg
+#svn-repo = plone
+#svn-path = /plone.z3cformbuttonoverrides
+#git-org = plone
+#status = OK
+#
+#[repo:plone.app.z3cformdrafts]
+#rules = %(here)s/plone-rules/plone.app.z3cformdrafts.cfg
+#svn-repo = plone
+#svn-path = /plone.app.z3cformdrafts
+#git-org = plone
+#status = OK
+#
 
 
 #[repo:Products.FoundationMember]
