some new repositories

--- a/etc/plone-projects.cfg
+++ b/etc/plone-projects.cfg
@@ -2,8 +2,8 @@
 authors-file = authors.cfg
 svn-repos =
 #    archetypes http://svn.plone.org/svn/archetypes
+#    plone http://svn.plone.org/svn/plone
     collective http://svn.plone.org/svn/collective
-    plone http://svn.plone.org/svn/plone
 
 svn-all-fast-export-tool = %(here)s/../src/svn2git/svn-all-fast-export
 svn-mirror-location = %(here)s/../var/repos/svn-mirror
@@ -26,6 +26,91 @@ svn-repo = collective
 svn-path = /Products.GroupUserFolder
 git-org = plone
 status = ROK
+
+
+
+#[repo:Products.TinyMCE]
+#rules = %(here)s/plone-rules/Products.TinyMCE.cfg
+#svn-repo = collective
+#svn-path = /Products.TinyMCE
+#git-org = plone
+#status = OK
+#
+#[repo:Products.DataGridField]
+#rules = %(here)s/plone-rules/Products.DataGridField.cfg
+#svn-repo = archetypes
+#svn-path = /Products.DataGridField
+#git-org = collective
+#status = OK
+#
+#[repo:archetypes.pfgextender]
+#rules = %(here)s/plone-rules/archetypes.pfgextender.cfg
+#svn-repo = archetypes
+#svn-path = /archetypes.pfgextender
+#git-org = collective
+#status = OK
+#
+#[repo:Products.AutocompleteWidget]
+#rules = %(here)s/plone-rules/Products.AutocompleteWidget.cfg
+#svn-repo = archetypes
+#svn-path = /MoreFieldsAndWidgets/Products.AutocompleteWidget
+#git-org = collective
+#status = OK
+#
+#[repo:ArchGenXML]
+#rules = %(here)s/plone-rules/ArchGenXML.cfg
+#svn-repo = archetypes
+#svn-path = /ArchGenXML
+#git-org = collective
+#status = OK
+#
+#[repo:Products.ATBackRef]
+#rules = %(here)s/plone-rules/MoreFieldsAndWidgets/ATBackRef.cfg
+#svn-repo = archetypes
+#svn-path = /MoreFieldsAndWidgets/ATBackRef
+#git-org = collective
+#status = OK
+#
+#[repo:plone.app.async]
+#rules = %(here)s/plone-rules/plone.app.async.cfg
+#svn-repo = plone
+#svn-path = /plone.app.async
+#git-org = plone
+#status = OK
+#
+#[repo:plone.app.themeeditor]
+#rules = %(here)s/plone-rules/plone.app.themeeditor.cfg
+#svn-repo = plone
+#svn-path = /plone.app.themeeditor
+#git-org = plone
+#status = OK
+#
+#[repo:plone.app.workflowmanager]
+#rules = %(here)s/plone-rules/plone.app.workflowmanager.cfg
+#svn-repo = plone
+#svn-path = /plone.app.workflowmanager
+#git-org = plone
+#status = OK
+#
+#[repo:plone.phonehome]
+#rules = %(here)s/plone-rules/plone.phonehome.cfg
+#svn-repo = plone
+#svn-path = /plone.phonehome
+#git-org = plone
+#status = OK
+#
+#[repo:plone.transforms]
+#rules = %(here)s/plone-rules/plone.transforms.cfg
+#svn-repo = plone
+#svn-path = /plone.transforms
+#git-org = plone
+#status = OK
+#
+
+
+
+
+
 
 
 #[repo:wicked]
@@ -411,13 +496,6 @@ status = ROK
 ##svn-path = /Products.PlonePAS
 ##git-org = plone
 ##status = OK
-#
-#[repo:Products.TinyMCE]
-#rules = %(here)s/plone-rules/Products.TinyMCE.cfg
-#svn-repo = collective
-#svn-path = /Products.TinyMCE
-#git-org = plone
-#status = REVIEW-NEEDED
 #
 #[repo:kss.core]
 #rules = %(here)s/plone-rules/kss.core.cfg
