--- a/etc/plone-rules/Products.TinyMCE.cfg
+++ b/etc/plone-rules/Products.TinyMCE.cfg
@@ -22,6 +22,7 @@ end repository
 
 match /Products.TinyMCE/trunk/
   repository Products.TinyMCE
+  max revision 246490
   branch master
 end match
 
